ci: added build workflow

--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -12,7 +12,7 @@ import Link from '@/components/common/Link.astro';
       <Button as='a' href={CONTACT_URL} size='sm'> Ask Pardo </Button>
     </div>
     <div class='flex items-center justify-center'>
-      <Link href={link('/')}>
+      <Link href={link('/oniverse-interview-tier-2/')}>
         <PardoLogo class='h-6 w-auto' />
       </Link>
     </div>
