style: global style

--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -28,8 +28,8 @@ const Component = as === 'a' ? Link : 'button';
   class={cn(
     'inline-flex items-center justify-center rounded text-nowrap',
     variant === 'primary' && 'bg-primary text-primary-foreground',
-    size === 'sm' && 'rounded-full px-3 py-2 text-sm font-normal',
-    size === 'base' && 'px-6 py-3 text-base font-medium',
+    size === 'sm' && 'rounded-full px-3 py-2 text-sm',
+    size === 'base' && 'px-6 py-3',
     className,
   )}
   {...rest as any}
