--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -21,7 +21,7 @@ import Link from '@/components/common/Link.astro';
       <PardoLogo class='h-16 w-auto' />
     </div>
   </div>
-  <p class='text-muted mt-2 text-center text-sm'>
+  <p class='text-muted text-center text-sm'>
     ©2025 CANTIERE DEL PARDO S.p.A. • ITALY • P.IVA 03869300404 • Cap. Soc. € 5.261.600,00 i.v. •
     All Rights Reserved
   </p>
