--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -7,7 +7,9 @@ import Link from '@/components/common/Link.astro';
 ---
 
 <div class='fixed top-5 left-1/2 z-50 container mx-auto -translate-x-1/2 transform px-4 sm:px-0'>
-  <header class='bg-background grid grid-cols-3 items-center justify-between rounded p-5 shadow'>
+  <header
+    class='bg-background grid grid-cols-3 items-center justify-between rounded p-4 shadow lg:p-5'
+  >
     <div>
       <Button as='a' href={CONTACT_URL} size='sm'> Ask Pardo </Button>
     </div>
