--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -90,16 +90,39 @@
   }
 
   body {
+    @apply m-0 p-0;
+    @apply text-base lg:text-lg;
     @apply bg-background text-foreground;
-    @apply m-0;
-    @apply p-0;
-  }
-}
+    @apply scroll-smooth;
 
-body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family:
+      -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+      'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  h1 {
+    @apply text-4xl font-bold text-balance lg:text-6xl;
+  }
+
+  h2 {
+    @apply text-3xl font-bold text-balance lg:text-4xl;
+  }
+
+  h3 {
+    @apply text-2xl font-semibold text-balance lg:text-3xl;
+  }
+
+  h4 {
+    @apply text-xl font-semibold text-balance lg:text-2xl;
+  }
+
+  h5 {
+    @apply text-lg font-medium text-balance lg:text-xl;
+  }
+
+  h6 {
+    @apply text-base font-medium text-balance lg:text-lg;
+  }
 }
