--- a/src/components/common/Slideshow.astro
+++ b/src/components/common/Slideshow.astro
@@ -3,14 +3,18 @@ import { cn } from '@/utils/utils';
 
 type Props = {
   class?: string;
+  paddingHorizontal?: boolean;
 };
 
-const { class: className } = Astro.props;
+const { class: className, paddingHorizontal = false } = Astro.props;
 ---
 
 <div
   class={cn(
-    'grid auto-cols-[100%] grid-flow-col gap-4 overflow-x-auto px-20 pb-2 sm:auto-cols-[50%] lg:auto-cols-[33.33%] xl:auto-cols-[25%]',
+    'grid auto-cols-[100%] grid-flow-col gap-4 overflow-x-auto pb-2 sm:auto-cols-[50%] lg:auto-cols-[33.33%] xl:auto-cols-[25%]',
+    '[&>*]:h-full [&>*]:object-cover',
+    'snap-x [&>*]:snap-start',
+    paddingHorizontal && 'scroll-px-4 px-4 lg:scroll-px-20 lg:px-20',
     className,
   )}
 >
