--- a/src/components/common/Card.astro
+++ b/src/components/common/Card.astro
@@ -1,7 +1,34 @@
 ---
+import { Image } from 'astro:assets';
 
+type Props = {
+  title: string;
+  description?: string;
+  image?: string;
+};
+
+const { title, description, image } = Astro.props;
 ---
 
-<div class='bg-card text-card-foreground aspect-square rounded p-5 shadow'>
-  <slot />
+<div
+  class='bg-card text-card-foreground relative flex aspect-square overflow-hidden rounded p-5 shadow'
+>
+  <div class='relative z-20 flex flex-col justify-end text-white'>
+    <h3>{title}</h3>
+    {description && <p>{description}</p>}
+  </div>
+  {
+    image && (
+      <div class='absolute inset-0 z-0'>
+        <Image
+          src={image}
+          alt={title}
+          width={300}
+          height={200}
+          class='h-full w-full object-cover'
+        />
+        <div class='pointer-events-none absolute inset-0 z-10 bg-gradient-to-t from-[rgba(0,0,0,0.8)] to-transparent' />
+      </div>
+    )
+  }
 </div>
