--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,11 @@
 ---
+import { Image } from 'astro:assets';
 import Card from '@/components/common/Card.astro';
-import Header from '@/components/navigation/Header.astro';
 import Section from '@/components/common/Section.astro';
 import Layout from '@/layouts/Layout.astro';
 import Slideshow from '@/components/common/Slideshow.astro';
 import { __DEV__, CONTACT_URL } from '@/config/constants';
 import Button from '@/components/common/Button.astro';
-import { Image } from 'astro:assets';
 
 const product = {
   name: 'Pardo E72',
@@ -18,157 +17,147 @@ const product = {
 ---
 
 <Layout title={product.model} description={product.description} image={product.image}>
-  <Header />
-  <main class='relative'>
-    <Section class='h-[100svh]'>
-      <video
-        autoplay={!__DEV__}
-        playsinline
-        muted
-        loop
-        class='absolute inset-0 h-full w-full object-cover'
-        preload='metadata'
-        poster='https://pardoyachts.com/cdn/shop/files/preview_images/5ebac490117e490cb7dc40ce1fa18ccf.thumbnail.0000000000_small.jpg?v=1736705026'
-      >
-        <source
-          src='https://pardoyachts.com/cdn/shop/videos/c/vp/5ebac490117e490cb7dc40ce1fa18ccf/5ebac490117e490cb7dc40ce1fa18ccf.HD-1080p-2.5Mbps-40882598.mp4?v=0'
-          type='video/mp4'
-        />
-      </video>
-      <div class='z-10 flex h-full flex-col items-center justify-center p-4 text-center sm:p-5'>
-        <h1 class='text-white'>
-          Scopri il nuovo<br />
-          <span class='text-[110%]'>{product.name}</span>
-        </h1>
+  <Section class='relative h-[100svh]'>
+    <video
+      autoplay={!__DEV__}
+      playsinline
+      muted
+      loop
+      class='absolute inset-0 h-full w-full object-cover'
+      preload='metadata'
+      poster='https://pardoyachts.com/cdn/shop/files/preview_images/5ebac490117e490cb7dc40ce1fa18ccf.thumbnail.0000000000_small.jpg?v=1736705026'
+    >
+      <source
+        src='https://pardoyachts.com/cdn/shop/videos/c/vp/5ebac490117e490cb7dc40ce1fa18ccf/5ebac490117e490cb7dc40ce1fa18ccf.HD-1080p-2.5Mbps-40882598.mp4?v=0'
+        type='video/mp4'
+      />
+    </video>
+    <div class='z-10 flex h-full flex-col items-center justify-center p-4 text-center sm:p-5'>
+      <h1 class='text-white'>
+        Scopri il nuovo<br />
+        <span class='text-[110%]'>{product.name}</span>
+      </h1>
+    </div>
+    <a class='absolute inset-0 z-10 h-full w-full' href='#news'>
+      <span class='sr-only'>Premi per scoprire prodotto</span>
+    </a>
+  </Section>
+  <Section id='news'>
+    <h2 class='text-center'>Novità</h2>
+    <Slideshow paddingHorizontal>
+      <Card
+        title='Comfort'
+        description='Endurance 72 è pensata per lunghe navigazioni: comfort inedito, indoor e outdoor, autonomia e consumi contenuti.'
+        image='https://pardoyachts.com/cdn/shop/files/a1.jpg?v=1736898209'
+      />
+      <Card
+        title='Efficienza'
+        description='Progettata per navigare a lungo, in dislocamento o planata. Eco-speed e design ottimizzato per massima efficienza e bassi consumi.'
+        image='https://pardoyachts.com/cdn/shop/files/h-1-3-a1.jpg?v=1736899201'
+      />
+      <Card
+        title='Silenziosità'
+        description='Crociera silenziosa grazie a soluzioni costruttive e propulsione avanzata.'
+        image='https://pardoyachts.com/cdn/shop/articles/sardinia_12971e7d-de7f-4478-a869-187a9a833c42.jpg?v=1747828381'
+      />
+      <Card
+        title='Ibrido'
+        description='Predisposizione per motorizzazione ibrida: sostenibilità già nel progetto.'
+        image='https://pardoyachts.com/cdn/shop/articles/News_-_PARDO_x_Seaspice_desktop_e1590f25-6dee-4860-9a1d-8c4501cbaced.jpg?v=1754311186'
+      />
+      <Card
+        title='Design'
+        description="Prua inversa e linee filanti: l'identità Pardo in ogni dettaglio."
+        image='https://pardoyachts.com/cdn/shop/files/p38_ok.jpg?v=1736898052'
+      />
+    </Slideshow>
+  </Section>
+  <Section marginHorizontal>
+    <div class='bg-muted flex flex-col gap-4 rounded p-10 text-center tracking-wide'>
+      <h5 class='text-3xl font-medium lg:text-5xl'>Più spazi, più comfort, più vita nel blu.</h5>
+      <p class='text-xl lg:text-4xl'>
+        Ispirato all'immensità del mare, per infiniti paesaggi da esplorare.
+      </p>
+    </div>
+    <div class='flex items-center justify-center'>
+      <Button as='a' href={CONTACT_URL}>Richiedi informazioni</Button>
+    </div>
+  </Section>
+  <Section id='gallery'>
+    <h2 class='text-center'>Galleria</h2>
+    <Slideshow class='lg:auto-cols-[50%] xl:auto-cols-[50%] [&>*]:rounded-none'>
+      <Card
+        description="Lo spazio abitabile sui ponti dell'E72 è straordinario, per un rapporto privilegiato con il mare."
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_001_b.jpg?v=1737108915'
+        imageAlt='Image of Pardo E72 from overhead vertical'
+      />
+      <Card
+        description='La doppia murata abbattibile estende la superficie del pozzetto dedicata al relax open air che, con la plancetta di poppa, raggiunge oltre 61 mq.'
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_004.jpg?v=1736085598'
+        imageAlt='Image of Pardo E72 from overhead horizontal'
+      />
+      <Card
+        description="Rilassarsi sul grande prendisole a poppa, intrattenersi nella zona conviviale con tavolo e sedute, o affacciarsi sull'acqua dalle terrazze laterali: nel pozzetto dell'E72 ogni momento è un piacere. L'area poppiera è dotata di garage con apertura idraulica, ideale per stivare un tender fino a 4 m."
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_005.jpg?v=1736085687'
+        imageAlt='Image of Pardo E72 from behind horizontal'
+      />
+      <Card
+        description='Con i suoi 27 mq di superficie, il flybridge offre ulteriori aree living e dining, ampliando quelle già presenti sul main deck.'
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_003.jpg?v=1736085598'
+        imageAlt='Image of Pardo E72 from overhead zoomed in'
+      />
+      <Card
+        description='Tre divani, un tavolo e un prendisole extralarge sono espressione anche a prua di un design estremamente attento al comfort.'
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_002.jpg?v=1736085598'
+        imageAlt='Image of Pardo E72 front from overhead zoomed in'
+      />
+    </Slideshow>
+    <Slideshow class='lg:auto-cols-[50%] xl:auto-cols-[50%] [&>*]:rounded-none'>
+      <Card
+        description='Tra food e living, il salone interno accoglie ogni momento di convivialità con un’atmosfera luminosa ed elegante.'
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_001.jpg?v=1736085966'
+        imageAlt='Image of Pardo E72 interior'
+      />
+      <Card
+        description='Meravigliosa scenografia per i momenti di conversazione ed entertainment, la parte del salone verso prua è un vero e proprio salotto panoramico circondato da ampie vetrate.'
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_004.jpg?v=1736085965'
+        imageAlt='Image of Pardo E72 interior'
+      />
+      <Card
+        description="Il tocco tecnologico della plancia di comando si coordina alla perfezione con il mood moderno dell'interior design."
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_007.jpg?v=1736085965'
+        imageAlt='Image of Pardo E72 central command station'
+      />
+      <Card
+        description="La suite armatoriale offre uno spazio personale ampio e accogliente, sfruttando al meglio la larghezza massima dello scafo a centro barca. Un confortevole divano si trova sotto l'ampia vetrata, che dona luminosità naturale alla cabina armatoriale."
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_008.jpg?v=1736085967'
+        imageAlt='Image of Pardo E72 interior bedroom'
+      />
+      <Card
+        description='Vero e proprio regno di privacy, il bagno privato della cabina armatoriale è dotato di un doppio lavabo e un ampio box doccia.'
+        image='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_011.jpg?v=1736085966'
+        imageAlt='Image of Pardo E72 interior bathroom'
+      />
+    </Slideshow>
+  </Section>
+  <Section id='technical-specifications' marginHorizontal>
+    <h2 class='text-center'>Scheda tecnica</h2>
+    <div class='grid grid-cols-2 gap-8 lg:grid-cols-3'>
+      <div class='col-span-2'>
+        <!-- Scheda tecnica -->
       </div>
-    </Section>
-    <Section>
-      <h2 class='text-center'>Novità</h2>
-      <Slideshow paddingHorizontal>
-        <Card
-          title='Comfort'
-          description='Endurance 72 è pensata per lunghe navigazioni: comfort inedito, indoor e outdoor, autonomia e consumi contenuti.'
-          image='https://pardoyachts.com/cdn/shop/files/a1.jpg?v=1736898209'
-        />
-        <Card
-          title='Efficienza'
-          description='Progettata per navigare a lungo, in dislocamento o planata. Eco-speed e design ottimizzato per massima efficienza e bassi consumi.'
-          image='https://pardoyachts.com/cdn/shop/files/h-1-3-a1.jpg?v=1736899201'
-        />
-        <Card
-          title='Silenziosità'
-          description='Crociera silenziosa grazie a soluzioni costruttive e propulsione avanzata.'
-          image='https://pardoyachts.com/cdn/shop/articles/sardinia_12971e7d-de7f-4478-a869-187a9a833c42.jpg?v=1747828381'
-        />
-        <Card
-          title='Ibrido'
-          description='Predisposizione per motorizzazione ibrida: sostenibilità già nel progetto.'
-          image='https://pardoyachts.com/cdn/shop/articles/News_-_PARDO_x_Seaspice_desktop_e1590f25-6dee-4860-9a1d-8c4501cbaced.jpg?v=1754311186'
-        />
-        <Card
-          title='Design'
-          description="Prua inversa e linee filanti: l'identità Pardo in ogni dettaglio."
-          image='https://pardoyachts.com/cdn/shop/files/p38_ok.jpg?v=1736898052'
-        />
-      </Slideshow>
-    </Section>
-    <Section marginHorizontal>
-      <div class='bg-muted flex flex-col gap-4 rounded p-10 text-center tracking-wide'>
-        <h5 class='text-3xl font-medium lg:text-5xl'>Più spazi, più comfort, più vita nel blu.</h5>
-        <p class='text-xl lg:text-4xl'>
-          Ispirato all'immensità del mare, per infiniti paesaggi da esplorare.
-        </p>
-      </div>
-      <div class='flex items-center justify-center'>
-        <Button as='a' href={CONTACT_URL}>Richiedi informazioni</Button>
-      </div>
-    </Section>
-    <Section>
-      <h2 class='text-center'>Galleria</h2>
-      <Slideshow class='lg:auto-cols-[50%] xl:auto-cols-[50%]'>
+      <div class='hidden lg:block'>
         <Image
           src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_001_b.jpg?v=1737108915'
-          alt='Image of Pardo E72 from overhead vertical'
+          alt='Pardo E72 Technical'
+          class='rounded'
           width={1920}
           height={1080}
         />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_004.jpg?v=1736085598'
-          alt='Image of Pardo E72 from overhead horizontal'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_005.jpg?v=1736085687'
-          alt='Image of Pardo E72 from behind horizontal'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_003.jpg?v=1736085598'
-          alt='Image of Pardo E72 from overhead zoomed in'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_002.jpg?v=1736085598'
-          alt='Image of Pardo E72 front from overhead zoomed in'
-          width={1920}
-          height={1080}
-        />
-      </Slideshow>
-      <Slideshow class='lg:auto-cols-[50%] xl:auto-cols-[50%]'>
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_001.jpg?v=1736085966'
-          alt='Image of Pardo E72 interior'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_004.jpg?v=1736085965'
-          alt='Image of Pardo E72 interior'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_007.jpg?v=1736085965'
-          alt='Image of Pardo E72 central command station'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_008.jpg?v=1736085967'
-          alt='Image of Pardo E72 interior bedroom'
-          width={1920}
-          height={1080}
-        />
-        <Image
-          src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_interior_desktop_011.jpg?v=1736085966'
-          alt='Image of Pardo E72 interior bathroom'
-          width={1920}
-          height={1080}
-        />
-      </Slideshow>
-    </Section>
-    <Section marginHorizontal>
-      <h2 class='text-center'>Scheda tecnica</h2>
-      <div class='grid grid-cols-2 gap-8 lg:grid-cols-3'>
-        <div class='col-span-2'>
-          <!-- Scheda tecnica -->
-        </div>
-        <div class='hidden lg:block'>
-          <Image
-            src='https://pardoyachts.com/cdn/shop/files/PardoYacht_PardoModel_E72_exterior_desktop_001_b.jpg?v=1737108915'
-            alt='Pardo E72 Technical'
-            class='rounded'
-            width={1920}
-            height={1080}
-          />
-        </div>
       </div>
-      <div class='flex items-center justify-center'>
-        <Button as='a' href={CONTACT_URL}>Richiedi informazioni</Button>
-      </div>
-    </Section>
-  </main>
+    </div>
+    <div class='flex items-center justify-center'>
+      <Button as='a' href={CONTACT_URL}>Richiedi informazioni</Button>
+    </div>
+  </Section>
 </Layout>
